#755 Add asyncFetchRows implementation for V11Statement